Update image assets and references in index.html for NID UCEED sections

--- a/index.html
+++ b/index.html
@@ -1729,9 +1729,9 @@
 
 <section class="study_section" style="display: flex; justify-content: center; align-items: center;">
     <img class="nid_study_img desktop-img" style="height: 580px; width: 100% !important"
-        src="./images/nid_mock_test_papers.png" alt="NID Tab Background">
+        src="./images/nid_uceed.png" alt="NID Tab Background">
     <img class="nid_study_img mobile-img" style="height: 500px;"
-        src="./images/nid_mock_test_M.png" alt="NID Tab Background">
+        src="./images/nid_uceedM.png" alt="NID Tab Background">
 </section>
 <style>
     .mobile-img {
@@ -1750,9 +1750,9 @@
 </style>
 <section class="study_section" style="display: flex; justify-content: center; align-items: center;">
     <img class="nid_study_img desktop-img" style="height: 580px; width: 100% !important"
-        src="./images/nid_bdesign_papers.png" alt="NID Tab Background">
+        src="./images/nid_nift_uceed.png" alt="NID Tab Background">
     <img class="nid_study_img mobile-img" style="height: 500px;"
-        src="./images/nid_bdesign_papers_M.png" alt="NID Tab Background">
+        src="./images/nid_nift_uceedM.png" alt="NID Tab Background">
 </section>
 <style>
     .mobile-img {
@@ -1769,27 +1769,7 @@
         }
     }
 </style>
-<section class="study_section" style="display: flex; justify-content: center; align-items: center;">
-    <img class="nid_study_img desktop-img" style="height: 580px; width: 100% !important"
-        src="./images/nid_dat_mains.png" alt="NID Tab Background">
-    <img class="nid_study_img mobile-img" style="height: 500px;"
-        src="./images/nid_dat_mains_M.png" alt="NID Tab Background">
-</section>
-<style>
-    .mobile-img {
-        display: none;
-    }
 
-    @media screen and (max-width: 768px) {
-        .desktop-img {
-            display: none;
-        }
-
-        .mobile-img {
-            display: block;
-        }
-    }
-</style>
 
 
 
