--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@
             <div class="card_result student-card_result">
                 <div class="card-header_result"></div>
                 <div class="profile-wrapper_result">
-                    <img src="images/sspandan.png" alt="S Spandan" class="profile-pic_result">
+                    <img src="https://uceedcoaching.org/images/sspandan.png" alt="S Spandan" class="profile-pic_result">
                 </div>
                 <div class="student-info_result">
                     <h3 class="student-name_result">S Spandan</h3>
@@ -1347,7 +1347,7 @@
             <div class="card_result student-card_result">
                 <div class="card-header_result"></div>
                 <div class="profile-wrapper_result">
-                    <img src="images/aditya-swain.png" alt="S Spandan" class="profile-pic_result">
+                    <img src="https://uceedcoaching.org/images/aditya-swain.png" alt="S Spandan" class="profile-pic_result">
                 </div>
                 <div class="student-info_result">
                     <h3 class="student-name_result">Aditya Swain</h3>
@@ -1364,7 +1364,7 @@
             <div class="card_result student-card_result">
                 <div class="card-header_result"></div>
                 <div class="profile-wrapper_result">
-                    <img src="images/yatri-patel.png" alt="Nikhil Manoj" class="profile-pic_result">
+                    <img src="https://uceedcoaching.org/images/yatri-patel.png" alt="Nikhil Manoj" class="profile-pic_result">
                 </div>
                 <div class="student-info_result">
                     <h3 class="student-name_result">Yatri Patel</h3>
