Update index.html title and meta tags to reflect UCEED Exam focus for 2026-2027

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top NID Coaching | Expert Prep for B.Des & M.Des Success</title>
+    <title>UCEED Exam Books & Study Material 2026-2027</title>
     <meta name="google-site-verification" content="AB0a1cA4zkM4DXlhdMUKGc3V0GirLuXigfIYhtjd9Pk" />
-    <meta name="title" content="NID Coaching and NID Entrance Exam Preparation Tips - NID Situation Test">
-    <meta name="description" content="Get top-tier NID coaching, comprehensive NID study material, and expert NID preparation tips for your ultimate success, including NID situation test and NID result guidance.">
+    <meta name="title" content="UCEED Exam Books & Study Material 2026-2027">
+    <meta name="description" content="Find the best UCEED Exam Books & Study Material 2026-2027 for B.Des preparation. Get expert guides, solved papers, and updated resources to boost your design entrance exam success.">
     <link rel="icon" href="images/brds.png" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
