Update footer links in index.html to use external URLs for NID, NIFT, and CEED coaching services

--- a/index.html
+++ b/index.html
@@ -2644,22 +2644,22 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-links">
-                    <a href="#">NID Coaching in Delhi</a>
-                    <a href="#">NID Coaching in Mumbai</a>
-                    <a href="#">NID Coaching in Pune</a>
-                    <a href="#">NID Coaching in Kolkata</a>
-                    <a href="#">NID Coaching in Ahmedabad</a>
-                    <a href="#">NID Coaching in Vadodara</a>
-                    <a href="#">NIFT</a>
-                    <a href="#">NIFT Coaching in Delhi</a>
-                    <a href="#">NIFT Coaching in Mumbai</a>
-                    <a href="#">NIFT Coaching in Pune</a>
-                    <a href="#">NIFT Coaching in Kolkata</a>
-                    <a href="#">NIFT Coaching in Ahmedabad</a>
-                    <a href="#">NIFT Coaching in Vadodara</a>
-                    <a href="#">CEED Coaching in Delhi</a>
-                    <a href="#">CEED Coaching in Mumbai</a>
-                    <a href="#">CEED Coaching in Pune</a>
+                    <a href="https://rathoredesign.com/nid-coaching-delhi/">NID Coaching in Delhi</a>
+                    <a href="https://rathoredesign.com/nid-coaching-mumbai/?nid">NID Coaching in Mumbai</a>
+                    <a href="https://rathoredesign.com/nid-coaching-pune/?nid">NID Coaching in Pune</a>
+                    <a href="https://rathoredesign.com/nid-coaching-kolkata/">NID Coaching in Kolkata</a>
+                    <a href="https://rathoredesign.com/nid-coaching-ahmedabad/?nid">NID Coaching in Ahmedabad</a>
+                    <a href="https://rathoredesign.com/nid-coaching-vadodara/">NID Coaching in Vadodara</a>
+                    
+                    <a href="https://rathoredesign.com/nift-coaching-delhi/">NIFT Coaching in Delhi</a>
+                    <a href="https://rathoredesign.com/nift-coaching-mumbai/">NIFT Coaching in Mumbai</a>
+                    <a href="https://rathoredesign.com/nift-coaching-pune/">NIFT Coaching in Pune</a>
+                    <a href="https://rathoredesign.com/nift-coaching-kolkata/">NIFT Coaching in Kolkata</a>
+                    <a href="https://rathoredesign.com/nift-coaching-ahmedabad/">NIFT Coaching in Ahmedabad</a>
+                    <a href="https://rathoredesign.com/nift-coaching-vadodara/">NIFT Coaching in Vadodara</a>
+                    <a href="https://rathoredesign.com/ceed-coaching-classes-delhi/">CEED Coaching in Delhi</a>
+                    <a href="https://rathoredesign.com/ceed-coaching-mumbai/">CEED Coaching in Mumbai</a>
+                    <a href="https://rathoredesign.com/ceed-coaching-pune/">CEED Coaching in Pune</a>
                 </div>
                 <!-- Back to top button -->
                 <div class="back-to-top" id="backToTop">
