Add canonical link to index.html and update sitemap.xml with new site URL

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Find the best UCEED Exam Books & Study Material 2026-2027 for B.Des preparation. Get expert guides, solved papers, and updated resources to boost your design entrance exam success.">
     <link rel="icon" href="images/brds.png" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="canonical" href="https://uceedstudymaterial.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -2331,6 +2332,10 @@
                                     data-location="BRDS Baner, Pune">( Get Direction )</a></li>
                             <li>Undri <a href="https://g.co/kgs/NjLLiMW" class="direction-link"
                                     data-location="BRDS Undri, Pune">( Get Direction )</a></li>
+                                    <li>Kothrud <a href="https://share.google/OGKTbBypo2LDeqZKp" class="direction-link"
+                                        data-location="BRDS Kothrud, Pune">( Get Direction )</a></li>
+                                <li>Sinhgad <a href="https://share.google/42KETws24YngH20dB" class="direction-link"
+                                        data-location="BRDS Sinhgad, Pune">( Get Direction )</a></li>
                         </ul>
                     </div>
                     <div class="location-block" data-city="vadodara">
