Add location block for Patna in index.html with contact details and directions

--- a/index.html
+++ b/index.html
@@ -2629,6 +2629,13 @@
                                     data-location="BRDS Dubai">( Get Direction )</a></li>
                         </ul>
                     </div>
+                    <div class="location-block" data-city="patna">
+                        <h4 class="location-title">BIHAR : +919913757598</h4>
+                        <ul class="location-list">
+                            <li>Patna <a href="https://maps.app.goo.gl/y6JLWEEQDSucVrqJA" class="direction-link"
+                                    data-location="BRDS Patna, Bihar">( Get Direction )</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <!-- Map preview -->
